[package]
name = "trimmer"
description = """
    A whitespace and memory friendly template engine
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["template", "render", "whitespace"]
homepage = "http://github.com/tailhook/trimmer"
documentation = "http://trimmer.readthedocs.io"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
matches = "0.1.4"
quick-error = "1.2.0"
combine = "2.0.0"
regex = "0.2.1"
serde_json = { version="0.8.3", optional=true }
owning_ref = "0.3.3"

[dev-dependencies]
difference = "0.4.1"

[features]
default = ["serde"]
serde = ["serde_json"]


